<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_logo" />

                <TextView
                    android:id="@+id/tvText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/sure_delete"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="7dp"
                        android:background="@drawable/rounded_white_background"
                        android:layout_weight="1"
                        android:text="@string/no"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/btYes"
                        android:layout_width="wrap_content"
                        android:background="@drawable/rounded_white_background"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_weight="1"
                        android:text="@string/yes"
                        android:textAllCaps="false" />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>